# handpick

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: build-publish-release.yml  build-test.yml  build_publish_release.yml  publish.yml  pytest.yml  tests.yml
handpick/: __init__.py  core.py
tests/: __init__.py  conftest.py  property_based_test.py  test_core.py  test_functions.py  test_pick.py  test_predicates.py  test_readme_examples.py  test_utils.py  unit_test.py
tests/data/: dict_of_int.json  list_of_int.json
