[tool.poetry]
name = "handpick"
version = "0.13.1"
description = "Traverse nested data structures."
license = "MIT"
authors = ["Michal Porteš <michalportes1@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/mportesdev/handpick"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-cov = "^4"
hypothesis = "^6"
mutmut = "^2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
